# configmonkey

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  TODO.md  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: build.yml  docker-push.yml  integration-tests.yml  main.yml
docs/: contract.yaml  index.html
docs/assets/: web-components.min.js
docs/contract/: index.yaml  parameters.yaml  schemas.yaml
docs/contract/paths/: apps-by-slug.yaml  apps.yaml  configs.yaml  envs-by-slug.yaml  envs.yaml
hosting/: docker-compose.yaml
src/: app.rs  lib.rs  main.rs
src/db/: db.rs
src/db/migrations/: 20230528013600_initial-schema.sql
src/models/: app.rs  config.rs  domain.rs  env.rs  list.rs  mod.rs
src/repos/: apps_repo.rs  configs_repo.rs  domains_repo.rs  envs_repo.rs  mod.rs  versions_repo.rs
src/routes/v1/: apps.rs  apps_routes.rs  apps_test.rs  common.rs  configs.rs  configs_routes.rs  domains_routes.rs  dtos.rs  envs.rs  envs_routes.rs  errors.rs  mod.rs  shared_dtos.rs  versions_routes.rs
src/services/: apps_service.rs  apps_svc.rs  configs_service.rs  configs_svc.rs  domains_service.rs  envs_service.rs  envs_svc.rs  mod.rs  versions_service.rs
src/shared/: validators.rs
tests/: apps_test.rs  configs_test.rs  domains_test.rs  envs_test.rs  versions_test.rs
tests/common/: mod.rs
