[package]
name = "config-monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate", "uuid" ] }
