[package]
name = "configmonkey"
version = "0.0.1"
edition = "2023"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = ["macros", "offline", "migrate", "uuid", "chrono" ] }
regex = { version = "1.8.4" }
lazy_static = { version = "1.4.0" }
